--- a/es_ecommerce.html
+++ b/es_ecommerce.html
@@ -255,7 +255,7 @@ permalink: /es/ecommerce
       <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$599.99</span></div>
     </header>
     <ul class="plan-features">
-    <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Válido para Empresas en Todo el Mundo</li>
+    <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Para Empresas en Todo el Mundo</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado dentro de su propio sitio web</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Sistema de Administración de contenido</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Catálogo de Productos (Con Imágenes y Videos)</li>
@@ -289,7 +289,7 @@ permalink: /es/ecommerce
     </header>
     <ul class="plan-features">
       
-<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Válido para Empresas en Todo el Mundo</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Para Empresas en Todo el Mundo</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado dentro de su propio sitio web</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Sistema de Administración de contenido</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Catálogo de Productos (Con Imágenes y Videos)</li>
