--- a/es_web.html
+++ b/es_web.html
@@ -227,7 +227,7 @@ permalink: /es/web
       <h4 class="plan-title">
         GOLD
       </h4>
-      <div class="plan-cost"><span class="plan-price">$399.99</span><span class="plan-type"></span></div>
+      <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$399.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       
