--- a/es_index.html
+++ b/es_index.html
@@ -734,8 +734,8 @@ permalink: /es/
               <i class="icon-file-text"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios de Una Página</h3></div><hr>
-              <p>Ideales para negocios pequeños, curriculum vitae profesionales, portafolios, artistas, grupos musicales, eventos, educadores, proyectos, provedores de servicios, y más.</p>
+              <h3 class="heading">Sitios de Una Página (Startup)</h3></div><hr>
+              <p>Ideales para negocios pequeños, startups, curriculum vitae profesionales, portafolios, artistas, grupos musicales, eventos, educadores, proyectos, provedores de servicios, y más.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
 
@@ -747,7 +747,7 @@ permalink: /es/
               <i class="icon-menu"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios Básicos</h3></div><hr>
+              <h3 class="heading">Sitios Básicos (Pro)</h3></div><hr>
               <p>Dése a conocer con un sitio sencillo y profesional ajustado a su presupuesto que proporcione información importante sobre su empresa u organización al público.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -759,7 +759,7 @@ permalink: /es/
               <i class="icon-embed2"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios Standard</h3></div><hr>
+              <h3 class="heading">Sitios Completos (Premium)</h3></div><hr>
               <p>Dése a conocer de manera profesional, muestre información detallada sobre sus productos y servicios. Características modernas como mapas de ubicación, formularios de contacto, galerías interactivas y más. </p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -774,7 +774,7 @@ permalink: /es/
               <i class="icon-lab"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios Avanzados</h3></div><hr>
+              <h3 class="heading">Sitios Avanzados (Gold)</h3></div><hr>
               <p>Sitios con funcionalidad avanzada. Bases de datos especializadas. Accesos de usuarios. Publique un blog dentro del sitio de su empresa para atraer nuevos clientes e interactuar con los existentes. Foros de discusión. Live streaming. Y más.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
