Update and rename studio.html to es_studio.html

--- a/es_studio.html
+++ b/es_studio.html
@@ -1,7 +1,7 @@
 ---
-layout: page
+layout: page_es
 title: AM Software | Studio
-permalink: /studio
+permalink: /es/studio
 ---
 
   <section class="probootstrap-slider flexslider">
