--- a/es_studio.html
+++ b/es_studio.html
@@ -179,7 +179,7 @@ permalink: /es/studio
 
   <center><h1>INICIEMOS</h1></center>
         <hr>
-        <p>Cotiza cualquiera de nuestros paquetes y en seguida nos pondremos en contacto para ofrecer una propuesta personalizada ajustada a tu presupuesto y necesidades.</p>
+        <p>Pague el 50% de cualquiera de nuestros paquetes por adelantado para iniciar el proceso y reciba 2 horas de consultoría (valoradas en más de $500) completamente gratis. Un representante le contactará al correo ó teléfono proporcionado por usted en la interfaz de pago de PayPal dentro de un período de 6 horas a partir de la realización del pago.</p>
         <br>
 
 <h2>CREACIÓN / DISEÑO DE MARCA</h2>
