--- a/es_index.html
+++ b/es_index.html
@@ -6,7 +6,7 @@ permalink: /es/
  
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/es_home.png);">
+      <li style="background-image: url(/img/es_home.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -18,7 +18,7 @@ permalink: /es/
           </div>
         </div>
       </li>
-      <li style="background-image: url(img/software.png);">
+      <li style="background-image: url(/img/software.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -30,7 +30,7 @@ permalink: /es/
           </div>
         </div>
       </li>
-      <li style="background-image: url(img/ecommerce.png);">
+      <li style="background-image: url(/img/ecommerce.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -42,7 +42,7 @@ permalink: /es/
           </div>
         </div>
       </li>
-      <li style="background-image: url(img/web.png);">
+      <li style="background-image: url(/img/web.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -54,7 +54,7 @@ permalink: /es/
           </div>
         </div>
       </li>
-      <li style="background-image: url(img/branding.png);">
+      <li style="background-image: url(/img/branding.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -154,7 +154,7 @@ permalink: /es/
           <figure>
             <div class="probootstrap-video">
               <a href="https://vimeo.com/45830194" class="popup-vimeo probootstrap-video-play"><i class="icon-play3"></i></a>
-              <img src="img/home.png" alt="" class="img-responsive img-border">
+              <img src="/img/home.png" alt="" class="img-responsive img-border">
             </div>
             <!-<figcaption>This is a caption. Far far away, behind the word mountains.</figcaption>->
           </figure>
@@ -168,7 +168,7 @@ permalink: /es/
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
+            <img style="height:420px;max-width:100%;" src="/img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
 
@@ -191,105 +191,105 @@ permalink: /es/
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.space">--><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.space">--><img src="/img/projects/project-1.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.guru">--><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.guru">--><img src="/img/projects/project-2.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://carfreak.club">--><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://carfreak.club">--><img src="/img/projects/project-6.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>        
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://hamburger.life">--><img src="img/projects/project-4.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://hamburger.life">--><img src="/img/projects/project-4.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://breakfast.center">--><img src="img/projects/project-5.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://breakfast.center">--><img src="/img/projects/project-5.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://billete.club">--><img src="img/projects/billete.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://billete.club">--><img src="/img/projects/billete.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://tcpnetwork.info">--><img src="img/projects/project-10.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://tcpnetwork.info">--><img src="/img/projects/project-10.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://homefort.club/proximamente">--><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://homefort.club/proximamente">--><img src="/img/projects/project-11.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://techfort.shop">--><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://techfort.shop">--><img src="/img/projects/project-12.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="/img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.work">--><img src="img/projects/work.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.work">--><img src="/img/projects/work.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.website">--><img src="img/projects/sorteo.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.website">--><img src="/img/projects/sorteo.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://techfort.club">--><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://techfort.club">--><img src="/img/projects/project-7.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://supremefeeling.com">--><img src="img/projects/project-8.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://supremefeeling.com">--><img src="/img/projects/project-8.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://getceed.com">--><img src="img/projects/getceed.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://getceed.com">--><img src="/img/projects/getceed.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@ permalink: /es/
       <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
+            <img style="height:420px;max-width:100%;" src="/img/sprites/c2.png">
           </center>
         <br>
      <h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
@@ -984,7 +984,7 @@ permalink: /es/
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
+            <img style="height:420px;max-width:100%;" src="/img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
         <div class="probootstrap-link-wrap">
@@ -1006,7 +1006,7 @@ permalink: /es/
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_1.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="/img/slider_1.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">A Clever Bike</h2>
@@ -1019,7 +1019,7 @@ permalink: /es/
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_2.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="/img/slider_2.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">Sleek Spaker</h2>
@@ -1032,7 +1032,7 @@ permalink: /es/
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_3.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="/img/slider_3.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">Black Person</h2>
