--- a/es_index.html
+++ b/es_index.html
@@ -1,6 +1,6 @@
 ---
 layout: page_es
-title: AM Software | Soluciones Digitales Sin Límites
+title: AM Software | Construyendo El Futuro
 permalink: /es/
 --- 
  
