--- a/en_about.html
+++ b/en_about.html
@@ -6,7 +6,7 @@ permalink: /en/about
 
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/en_home.png);">
+      <li style="background-image: url(/img/en_home.png);">
         <div class="container">
           <div class="row">
           </div>
