--- a/en_contact.html
+++ b/en_contact.html
@@ -6,7 +6,7 @@ permalink: /en/contact
 
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/contact.jpg);">
+      <li style="background-image: url(/img/contact.jpg);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
