--- a/en_studio.html
+++ b/en_studio.html
@@ -6,7 +6,7 @@ permalink: /en/studio
 
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/branding.png);">
+      <li style="background-image: url(/img/branding.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
