--- a/es_about.html
+++ b/es_about.html
@@ -6,7 +6,7 @@ permalink: /es/acerca
 
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/es_home.png);">
+      <li style="background-image: url(/img/es_home.png);">
         <div class="container">
           <div class="row">
           </div>
