--- a/es_ecommerce.html
+++ b/es_ecommerce.html
@@ -6,7 +6,7 @@ permalink: /es/ecommerce
 
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/ecommerce.png);">
+      <li style="background-image: url(/img/ecommerce.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
