--- a/es_web.html
+++ b/es_web.html
@@ -6,7 +6,7 @@ permalink: /es/web
 
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/web.png);">
+      <li style="background-image: url(/img/web.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
