--- a/es_index.html
+++ b/es_index.html
@@ -324,7 +324,7 @@ permalink: /es/
 <br><br><br>
 <section class="probootstrap-slider flexslider">
 <ul class="slides">
-<li style="background-image: url(img/software.png);">
+<li style="background-image: url(/img/software.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -528,7 +528,7 @@ permalink: /es/
   </section>
   <!-- END section -->  
 
-  <div class="probootstrap-animate" style="background-image: url(img/banners/cta/software.png);width:100%;height:300px;">
+  <div class="probootstrap-animate" style="background-image: url(/img/banners/cta/software.png);width:100%;height:300px;">
     <br><br>
       <h2 class="mb20">CUÉNTANOS SOBRE TU PROYECTO Y TE BRINDAREMOS <br> LA MEJOR SOLUCIÓN POSIBLE</h2>
       <p></p>
@@ -538,7 +538,7 @@ permalink: /es/
 <br><br><br>
 <section class="probootstrap-slider flexslider">
 <ul class="slides">
-<li style="background-image: url(img/ecommerce.png);">
+<li style="background-image: url(/img/ecommerce.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -693,7 +693,7 @@ permalink: /es/
   </section>
   <!-- END section -->  
 
-  <div class="probootstrap-animate" style="background-image: url(img/banners/cta/ecommerce.png);width:100%;height:300px;">
+  <div class="probootstrap-animate" style="background-image: url(/img/banners/cta/ecommerce.png);width:100%;height:300px;">
     <br><br>
       <h2 class="mb20">VENDE TUS PRODUCTOS O SERVICIOS EN LÍNEA <br> LAS 24 HORAS</h2>
       <p></p>
@@ -703,7 +703,7 @@ permalink: /es/
 <br><br><br>
 <section class="probootstrap-slider flexslider">
   <ul class="slides">
-<li style="background-image: url(img/web.png);">
+<li style="background-image: url(/img/web.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -810,7 +810,7 @@ permalink: /es/
   </section>
   <!-- END section -->  
 
-<div class="probootstrap-animate" style="background-image: url(img/banners/cta/web.png);width:100%;height:300px;">
+<div class="probootstrap-animate" style="background-image: url(/img/banners/cta/web.png);width:100%;height:300px;">
     <br><br>
       <h2 class="mb20">CREAMOS TU SITIO WEB Y PRESCENCIA ONLINE<br> EN CUESTIÓN DE HORAS</h2>
       <p></p>
@@ -820,7 +820,7 @@ permalink: /es/
 <br><br><br>
 <section class="probootstrap-slider flexslider">
   <ul class="slides">
-<li style="background-image: url(img/branding.png);">
+<li style="background-image: url(/img/branding.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -970,7 +970,7 @@ permalink: /es/
   </section>
   <!-- END section -->
   
-  <div class="probootstrap-animate" style="background-image: url(img/banners/cta/branding.png);width:100%;height:300px;">
+  <div class="probootstrap-animate" style="background-image: url(/img/banners/cta/branding.png);width:100%;height:300px;">
     <br><br>
       <h2 class="mb20">LLEVA TU MARCA A UN NUEVO NIVEL <br> Y EXPERIMENTA LOS BENEFICIOS INMEDIATAMENTE</h2>
       <p></p>
