--- a/es_index.html
+++ b/es_index.html
@@ -24,7 +24,7 @@ permalink: /es/
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <h2><a href="/software" style="color:#ffffff;"><strong>Software</strong></a></h2>
+                <h2><a href="/es/software" style="color:#ffffff;"><strong>Software</strong></a></h2>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@ permalink: /es/
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <h2><a href="/ecommerce" style="color:#ffffff;"><strong>E-Commerce</strong></a></h2>
+                <h2><a href="/es/ecommerce" style="color:#ffffff;"><strong>E-Commerce</strong></a></h2>
               </div>
             </div>
           </div>
@@ -48,7 +48,7 @@ permalink: /es/
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <h2><a href="/web"  style="color:#ffffff;"><strong>Web</strong></a></h2>
+                <h2><a href="/es/web"  style="color:#ffffff;"><strong>Web</strong></a></h2>
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@ permalink: /es/
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
                 <!--<h2> </h2>-->
-                <h2><a href="/branding" style="color:#ffffff;"><strong>Branding</strong></a></h2>
+                <h2><a href="/es/studio" style="color:#ffffff;"><strong>Branding</strong></a></h2>
               </div>
             </div>
           </div>
