--- a/es_index.html
+++ b/es_index.html
@@ -532,7 +532,7 @@ permalink: /es/
     <br><br>
       <h2 class="mb20">CUÉNTANOS SOBRE TU PROYECTO Y TE BRINDAREMOS <br> LA MEJOR SOLUCIÓN POSIBLE</h2>
       <p></p>
-      <center><a href="/software#cta" role="button" class="btn btn-subscribe">COTIZAR</a></center>
+      <center><a href="/es/software#cta" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
 <br><br><br>
@@ -697,7 +697,7 @@ permalink: /es/
     <br><br>
       <h2 class="mb20">VENDE TUS PRODUCTOS O SERVICIOS EN LÍNEA <br> LAS 24 HORAS</h2>
       <p></p>
-      <center><a href="/ecommerce#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
+      <center><a href="/es/ecommerce#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
 <br><br><br>
@@ -814,7 +814,7 @@ permalink: /es/
     <br><br>
       <h2 class="mb20">CREAMOS TU SITIO WEB Y PRESCENCIA ONLINE<br> EN CUESTIÓN DE HORAS</h2>
       <p></p>
-      <center><a href="/web#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
+      <center><a href="/es/web#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
 <br><br><br>
@@ -974,7 +974,7 @@ permalink: /es/
     <br><br>
       <h2 class="mb20">LLEVA TU MARCA A UN NUEVO NIVEL <br> Y EXPERIMENTA LOS BENEFICIOS INMEDIATAMENTE</h2>
       <p></p>
-      <center><a href="/studio#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
+      <center><a href="/es/studio#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
   <!-- END section cta -->
