--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
 	
 	
-	<link href="home/common-css/ionicons.css" rel="stylesheet">
+	<link href="/home/common-css/ionicons.css" rel="stylesheet">
 	
 	
-	<link rel="stylesheet" href="home/common-css/jquery.classycountdown.css" />
+	<link rel="stylesheet" href="/home/common-css/jquery.classycountdown.css" />
 		
-	<link href="home/css/styles.css" rel="stylesheet">
+	<link href="/home/css/styles.css" rel="stylesheet">
 	
-	<link href="home/css/responsive.css" rel="stylesheet">
+	<link href="/home/css/responsive.css" rel="stylesheet">
 
 	<!-- Flags -->
 	<link href="./flag-icon-css-master/css/flag-icon.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 </head>
 <body>
 	
-	<div class="main-area center-text" style="background-image:url(images/cover.png);">
+	<div class="main-area center-text" style="background-image:url(/images/cover.png);">
 		
 		<div class="display-table">
 			<div class="display-table-cell">
