--- a/es_about.html
+++ b/es_about.html
@@ -99,7 +99,7 @@ permalink: /es/acerca
           <figure>
             <div class="probootstrap-video">
               <a href="https://vimeo.com/45830194" class="popup-vimeo probootstrap-video-play"><i class="icon-play3"></i></a>
-              <img src="img/home.png" alt="" class="img-responsive img-border">
+              <img src="/img/home.png" alt="" class="img-responsive img-border">
             </div>
             <!-<figcaption>This is a caption. Far far away, behind the word mountains.</figcaption>->
           </figure>
@@ -122,105 +122,105 @@ permalink: /es/acerca
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.space">--><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.space">--><img src="/img/projects/project-1.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.guru">--><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.guru">--><img src="/img/projects/project-2.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://carfreak.club">--><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://carfreak.club">--><img src="/img/projects/project-6.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>        
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://hamburger.life">--><img src="img/projects/project-4.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://hamburger.life">--><img src="/img/projects/project-4.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://breakfast.center">--><img src="img/projects/project-5.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://breakfast.center">--><img src="/img/projects/project-5.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://billete.club">--><img src="img/projects/billete.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://billete.club">--><img src="/img/projects/billete.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://tcpnetwork.info">--><img src="img/projects/project-10.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://tcpnetwork.info">--><img src="/img/projects/project-10.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://homefort.club/proximamente">--><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://homefort.club/proximamente">--><img src="/img/projects/project-11.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://techfort.shop">--><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://techfort.shop">--><img src="/img/projects/project-12.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="/img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.work">--><img src="img/projects/work.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.work">--><img src="/img/projects/work.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://nica.website">--><img src="img/projects/sorteo.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://nica.website">--><img src="/img/projects/sorteo.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://techfort.club">--><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://techfort.club">--><img src="/img/projects/project-7.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://supremefeeling.com">--><img src="img/projects/project-8.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://supremefeeling.com">--><img src="/img/projects/project-8.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://getceed.com">--><img src="img/projects/getceed.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://getceed.com">--><img src="/img/projects/getceed.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
@@ -251,7 +251,7 @@ permalink: /es/acerca
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card probootstrap-person text-center">
             <div class="probootstrap-card-media">
-              <img src="img/person_1.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
+              <img src="/img/person_1.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">Jeremy Slater</h2>
@@ -269,7 +269,7 @@ permalink: /es/acerca
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card probootstrap-person text-center">
             <div class="probootstrap-card-media">
-              <img src="img/person_2.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
+              <img src="/img/person_2.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">James Butterly</h2>
@@ -287,7 +287,7 @@ permalink: /es/acerca
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card probootstrap-person text-center">
             <div class="probootstrap-card-media">
-              <img src="img/person_3.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
+              <img src="/img/person_3.jpg" class="img-responsive" alt="Free HTML5 Template by uicookies.com">
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0">James Smith</h2>
@@ -310,7 +310,7 @@ permalink: /es/acerca
 <div class="container">
  <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
+            <img style="height:420px;max-width:100%;" src="/img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
      
@@ -321,7 +321,7 @@ permalink: /es/acerca
 
         <div class="probootstrap-cta probootstrap-animate">
           <center>
-            <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
+            <img style="height:420px;max-width:100%;" src="/img/sprites/c2.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
 
