--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 </head>
 <body>
 	
-	<div class="main-area center-text" style="background-image:url(/images/cover.png);">
+	<div class="main-area center-text" style="background-image:url(/images/cover.png);no-repeat center center fixed; 
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;">
 		
 		<div class="display-table">
 			<div class="display-table-cell">
