--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ background-size: cover;">
 		
 		<div class="display-table">
 			<div class="display-table-cell">
-				
-				<!--<img src="">-->
-
+				<center>				
+					<img src="/img/logo.png">
+				</center>
 				<!--<h1 class="title font-white"><b>Comming Soon</b></h1>
 				<p class="desc font-white">Our website is currently undergoing scheduled maintenance.
 					We Should be back shortly. Thank you for your patience.</p>
