--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ background-size: cover;">
 		<div class="display-table">
 			<div class="display-table-cell">
 				<center>				
-					<img src="/img/logo.png">
+					<img src="/img/logo.png" style="height:50%;width:auto;">
 				</center>
 				<!--<h1 class="title font-white"><b>Comming Soon</b></h1>
 				<p class="desc font-white">Our website is currently undergoing scheduled maintenance.
