--- a/en_ecommerce.html
+++ b/en_ecommerce.html
@@ -207,7 +207,7 @@ permalink: /en/ecommerce
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
-      <li><i class=""> </i></li>
+      <!--<li><i class=""> </i></li>-->
     </ul>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ANWP98MVC8YNW">Start</a></div>
@@ -240,7 +240,7 @@ permalink: /en/ecommerce
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
-      <li><i class=""> </i></li>
+      <!--<li><i class=""> </i></li>-->
 
 
     </ul>
