--- a/en_studio.html
+++ b/en_studio.html
@@ -201,6 +201,7 @@ permalink: /en/studio
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HP33XS5K9HG2U">Start</a></div>
   </div>
@@ -216,6 +217,7 @@ permalink: /en/studio
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Graphic Line</li>
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Social Media Design</li>
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>3 Advertisement Designs</li>
+      <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
