--- a/en_index.html
+++ b/en_index.html
@@ -845,7 +845,7 @@ permalink: /en/
         <center><h1>STUDIO</h1></center>
         <hr><br>
 
-        <p>We offer Communication, Graphic Design, Audiovisual Production, 3D Animation, 2D, Augmented Reality (AR), Virtual Reality (VR), Branding and Digital Marketing services. We create brands completely from scratch, and we help develop companies with existing brands that want to improve their identity and corporate image in order to project themselves to specific market segments, according to their work approach, with objectives determined through visual communication strategies and corporate</p>
+        <p>We offer Communication, Graphic Design, Audiovisual Production, 3D Animation, 2D, Augmented Reality (AR), Virtual Reality (VR), Branding and Digital Marketing services. We create brands completely from scratch, and we help develop companies with existing brands that want to improve their identity and corporate image in order to project themselves to specific market segments.</p>
 
         <p>We define communication and corporate identity problems that our clients possess and define specific objectives to create a conceptualization of communicational and visual strategy together with the production of the graphic elements necessary for the development and refinement of a defined and effective image and identity that will provide you with a Greater positioning and competitiveness to your brand.</p>
 
