--- a/en_index.html
+++ b/en_index.html
@@ -847,7 +847,7 @@ permalink: /en/
 
         <p>We offer Communication, Graphic Design, Audiovisual Production, 3D Animation, 2D, Augmented Reality (AR), Virtual Reality (VR), Branding and Digital Marketing services. We create brands completely from scratch, and we help develop companies with existing brands that want to improve their identity and corporate image in order to project themselves to specific market segments.</p>
 
-        <p>We define communication and corporate identity problems that our clients possess and define specific objectives to create a conceptualization of communicational and visual strategy together with the production of the graphic elements necessary for the development and refinement of a defined and effective image and identity that will provide you with a Greater positioning and competitiveness to your brand.</p>
+        <p>We define and analyze communication and corporate identity problems that our clients experience and define specific objectives to create a conceptualization of communicational and visual strategy together with the production of the graphic elements necessary for the development and refinement of a defined and effective image and identity that provides our clients’ brands with a greater positioning and competitiveness on the market.</p>
 
         <p>Communication, Branding and Digital Marketing Solutions we offer:</p>
 
