--- a/en_web.html
+++ b/en_web.html
@@ -118,6 +118,10 @@ permalink: /en/web
         <hr>
         <!--<p>Pay 50% of any of our packages in advance to start the process and receive 2 hours of consulting (valued at more than $ 500) completely free. A representative will contact you at the email or telephone number provided by you in the PayPal payment interface within a period of 6 hours from the date of payment.</p>-->
         <br>
+
+      </div>
+
+      <div class="row" id="pricing">
 <h2>WEBSITE DEVELOPMENT</h2>
 <br>
   <div class="snip1404">
@@ -259,7 +263,8 @@ permalink: /en/web
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HKTFFU6QRRMZE">Start</a></div>
   </div>
 </div>
-
+</div>
+<div class="row" id="pricing">
 
              <br>
 <h2>WEBSITE HOSTING</h2>
@@ -370,7 +375,8 @@ permalink: /en/web
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GDGV4PYN2GZVC">Start</a></div>
   </div>
 </div>
-
+</div>
+<div class="row" id="pricing">
       
      
 
