--- a/en_web.html
+++ b/en_web.html
@@ -319,7 +319,11 @@ permalink: /en/web
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2D5BABLN8YR5C">Start</a></div>
   </div>
 </div>
+</div>
 
+
+
+<div class="row" id="pricing">
       
 
              <br>
