--- a/en_web.html
+++ b/en_web.html
@@ -201,7 +201,7 @@ permalink: /en/web
       <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$299.99</span></div>
     </header>
     <ul class="plan-features">
-      <!--<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Support for all types of devices (Responsive)</li>
+      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Support for all types of devices (Responsive)</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Images</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Video</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Navigation</li>
@@ -223,7 +223,7 @@ permalink: /en/web
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
-      <li><i class=""> </i></li>-->
+      <li><i class=""> </i></li>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=8JU4JVQSKF4X8">Start</a></div>
   </div>
@@ -235,7 +235,7 @@ permalink: /en/web
       <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$399.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
-      <!--
+      
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Support for all types of devices (Responsive)</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Images</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Video</li>
@@ -258,7 +258,7 @@ permalink: /en/web
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Accept Donations</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Private Pages</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>CMS </li>
-<li><i class="icon-checkmark" style="color:#ffffff;"> </i>More...</li>-->
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>More...</li>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HKTFFU6QRRMZE">Start</a></div>
   </div>
