--- a/en_web.html
+++ b/en_web.html
@@ -495,7 +495,7 @@ permalink: /en/web
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Channel Grouping</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Content Grouping</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Event Tracking</li>
-    <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Site Search Tracking</li>>
+    <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Site Search Tracking</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Custom Alerts</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Real-Time Custom Reports</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>24/7 Technical Support</li>
