--- a/en_ecommerce.html
+++ b/en_ecommerce.html
@@ -181,7 +181,7 @@ permalink: /en/ecommerce
       <div class="row" id="pricing">
 
              <br>
-<h2>WEBSITE HOSTING</h2>
+<h2>E-COMMERCE HOSTING</h2>
 <br>
         <div class="snip1404">
   <div class="plan startup">
@@ -323,7 +323,6 @@ permalink: /en/ecommerce
 </div>
 </div>
 
-</div>
 
 
 <div class="row" id="pricing">
@@ -503,7 +502,7 @@ permalink: /en/ecommerce
       <div class="plan-cost"><span class="plan-price">$299.99</span><span class="plan-type">/Month</span></div>
     </header>
     <ul class="plan-features">
-    <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Advanced Website Analytics</li>
+    <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Advanced E-Commerce Analytics</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Real-Time Custom Reports</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>9-5 Technical Support</li>
     <li><i class=""> </i></li>
@@ -527,7 +526,7 @@ permalink: /en/ecommerce
       <div class="plan-cost"><span class="plan-price">$399.99</span><span class="plan-type">/Month</span></div>
     </header>
     <ul class="plan-features">
-     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Advanced Website Analytics</li>
+     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Advanced E-Commerce Analytics</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Custom Metrics</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Event Tracking</li>
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Real-Time Custom Reports</li>
