--- a/es_studio.html
+++ b/es_studio.html
@@ -1,7 +1,7 @@
 ---
 layout: page_es
-title: AM Software | Studio
-permalink: /es/studio
+title: AM Software | Marketing
+permalink: /es/marketing
 ---
 
   <section class="probootstrap-slider flexslider">
@@ -11,7 +11,7 @@ permalink: /es/studio
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
-                <h2>STUDIO</h2>
+                <h2>MARKETING</h2>
               </div>
             </div>
           </div>
