--- a/en_software.html
+++ b/en_software.html
@@ -28,11 +28,9 @@ permalink: /en/software
         <!--<center><h1>DESARROLLO DE SOFTWARE DE ÚLTIMA GENERACIÓN</h1></center>
         <hr><br>-->
 
-        <p>Our team has more than 10 years of experience in design, administration, research and development of information systems and specialized software solutions for companies and organizations in various industries, creating products of the highest quality designed to meet specific needs and resources of all types of business, developed with the latest technologies. Cloud computing solutions. Web and mobile applications. Stand-Alone applications. Business systems. Automation systems Advertising and customer service systems. Optimized software solutions for finance, administration, retail, production, manufacturing, sales, marketing, advertising, commerce, human resources, project management, business resources, production and industrial control, distribution, supply, accounting, legal, construction, agribusiness, health, pharmaceutical, education, research, real estate, tourism, textiles, entertainment, insurance and more.</p>
+        <p>Our team has more than 10 years of experience in development, design, management and maintenance of information systems and specialized software solutions for companies and organizations in various industries, creating products of the highest quality designed to meet the specific needs and resources of any type of business, developed with the latest technologies. Cloud computing solutions. Web and mobile applications. Stand-Alone applications. Enterprise systems. Automation systems.  Customer service systems. Optimized tailored software solutions for finance, administration, retail, production, manufacturing, sales, marketing, advertising, commerce, human resources, project management, business resources, production and industrial control, distribution, supply, accounting, legal, construction, agribusiness, health, pharmaceutical, education, research, real estate, tourism, textiles, entertainment, insurance and more.</p>
 
-        <p>Our products guarantee the optimization of our clients' resources through the efficient design and implementation of state-of-the-art customized computer systems that facilitate planning, organization, execution, control and administration internally and externally. </p>
-
-        <p>On the subject of software, you can fully trust us. Whatever the problem, we have the most efficient, modern and accessible solution. We design and implement systems that increase the productivity of your company, based on your needs and resources.</p>
+        <p>In matter of software, you can fully trust us. Whatever the problem, we come up with the most efficient, modern, accessible and elegant solution. Whatever your idea, we make it come true. If you can think it, we can develop it.</p>
 
       </div>
     <br><br>
@@ -44,8 +42,8 @@ permalink: /en/software
               <i class="icon-display"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Stand-Alone Applications</h3></div><hr>
-              <p>For companies and companies that require a centralized application, AM Software has a dedicated team with more than 10 years of experience in creating and managing applications using various technologies.</p>
+              <h3 class="heading">Stand-Alone Apps</h3></div><hr>
+              <p>For companies and organizations that require a centralized application, AM Software has a dedicated team with more than 10 years of experience in creating and managing applications using various technologies.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
 
@@ -58,7 +56,7 @@ permalink: /en/software
               <i class="icon-laptop3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Web Applications</h3></div><hr>
+              <h3 class="heading">Web Apps</h3></div><hr>
               <p>Regardless of the industry; finance, automotive, agribusiness, e-commerce, retail and many more, AM Software has created applications for customers around the world. We create web applications with the highest standards and user experience that are also intended to increase your productivity and profits.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -87,7 +85,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">Cloud Computing</h3></div><hr>
-              <p>We offer secure and uninterrupted cloud computing services with unmatched speed that ensure your customers experience consistent high performance and a pleasant experience.</p>
+              <p>We offer secure and uninterrupted cloud computing services with unmatched speed that ensure your customers experience consistent high performance and a pleasant experience.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
 
@@ -114,7 +113,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">Data Management</h3></div><hr>
-              <p>At AM Software, our data management service allows organizations and companies to drive innovation and track growth by sharing, accessing and analyzing data without inconvenience.</p>
+              <p>Our data management service allows organizations and companies to drive innovation and track growth by sharing, accessing and analyzing data without inconvenience.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
@@ -129,7 +129,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">Enterprise Software</h3></div><hr>
-              <p>Our enterprise software solutions are aimed at meeting the specific needs of organizations and companies through a modular development approach with the aim of increasing productivity and increasing the conversion rate in any industry.</p>
+              <p>Our enterprise software solutions are aimed at meeting the specific needs of organizations and companies through a modular development approach with the aim of increasing productivity and increasing the conversion rate in any industry.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
 
@@ -143,7 +144,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">Customer Service Systems</h3></div><hr>
-              <p>We create interactive software and customer-based services that provide an unparalleled satisfaction experience for your customers and increase their conversion rates helping to solve customer related problems quickly and efficiently.</p>
+              <p>We create interactive software and customer-based services that provide an unparalleled satisfaction experience for your customers and increase their conversion rates helping to solve customer related problems quickly and efficiently.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
@@ -156,7 +158,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">Interactive Software</h3></div><hr>
-              <p>We design interactive and educational software that can be used to educate clients, staff and students in a wider range of industries, but the possibilities go beyond. From simulations to video games, in AM Software there are no limits.</p>
+              <p>We design interactive and educational software that can be used to educate clients, staff and students in a wider range of industries, but the possibilities go beyond. From simulations to video games, in AM Software there are no limits.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
@@ -171,7 +174,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">System Modernization and Adaptation</h3></div><hr>
-              <p>We offer this service to companies looking to change, modify or update their software processes.</p>
+              <p>We offer this service to companies looking to change, modify or update their current software systems and processes.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
 
@@ -185,7 +189,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">Technical Support</h3></div><hr>
-              <p>We provide a comprehensive and permanent technical support service for a wide range of companies in various industries.</p>
+              <p>We provide a comprehensive and permanent technical support service for a wide range of companies in various industries.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
@@ -198,7 +203,8 @@ permalink: /en/software
             </div>
             <div class="text">
               <h3 class="heading">System Administration</h3></div><hr>
-              <p>We help companies manage and monitor the operation of their entire computer network and digital communication services.</p>
+              <p>We help companies manage and monitor the operation of their entire computer network and digital communication services.
+</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
