--- a/en_web.html
+++ b/en_web.html
@@ -25,7 +25,8 @@ permalink: /en/web
     <div class="container">
       <div class="row">
 
-        <p>At AM Software we specialize in next-generation web development and help your business grow and increase its visibility and sales. We design and develop modern and elegant responsive websites (adapted to any type of device) that guarantee a positive impact on the performance of your business. A website is important for any type of organization that maintains an interaction with the public and even for individuals seeking to develop and grow within their industries and the current competitive work environment such as an online portfolio or curriculum vitae. We offer hosting services and technical support of incomparable quality and accessibility.</p>
+        <p>At AM Software we specialize in next-generation web development and help your business grow and increase its visibility and sales. We design and develop modern and elegant responsive websites (adapted to any type of device) that guarantee a positive impact on the performance of your business. A website is important for any type of organization that maintains an interaction with the public and even for individuals seeking to develop and grow within their industries and the current competitive work environment such as an online portfolio or curriculum vitae. We offer hosting services and technical support of incomparable quality and affordability.
+</p>
         
         <p>We offer different types of website to meet the specific needs of our customers.</p>
 
@@ -105,7 +106,7 @@ permalink: /en/web
             </div>
             <div class="text">
               <h3 class="heading">Web App Integration</h3></div><hr>
-              <p>Development and implementation of world class web applications that meet your specific needs and objectives.</p>
+              <p>Development and implementation of world-class web applications that meet your specific needs and objectives.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
