--- a/en_ecommerce.html
+++ b/en_ecommerce.html
@@ -25,11 +25,13 @@ permalink: /en/ecommerce
     <div class="container">
       <div class="row">
 
-        <p>Sell your products and services online 24 hours a day. An E-Commerce gives your business an excellent opportunity to make sales at all times and helps you reach potential customers. Since most people prefer to shop online due to a shortage of time, you can easily earn a lot more revenue by offering this convenience to your customers and potential customers. With the help of an e-commerce website, people can select and buy desired products at any time. They can easily pay through credit cards and other payment options available on the website.</p>
+        <p>Sell your products and services online 24 hours a day. An E-Commerce gives your business an excellent opportunity to make sales at all times and helps you reach potential customers. Since most people prefer to shop online due to a shortage of time, you can easily earn a lot more revenue by offering this convenience to your customers and potential customers. With the help of an e-commerce website, people can select and buy desired products at any time. They can easily pay through credit cards and other payment options available on the website.
+</p>
 
-        <p>Selling products and services online is less expensive than traditional methods. There are several high indirect costs that are included in offline or offline commerce, which are avoided in online sales through an E-Commerce. The days when it was too complicated for local merchants to sell or expand their businesses, products and services around the world were left behind. This was difficult due to market conditions, local competition, low advertising reach, higher expansion costs and several other factors.</p>
+        <p>Selling products and services online is less expensive than traditional methods. There are several high indirect costs that are included in traditional or offline commerce, which are avoided in online sales through an E-Commerce store. The days when it was too complicated for local merchants to sell or expand their businesses, products and services around the world were left behind. This was difficult due to market conditions, local competition, low advertising reach, higher expansion costs and several other factors.
+</p>
 
-        <p>That is why in today's world electronic commerce is the fastest method to expand and grow throughout the world.</p>
+        <p>That is why in today's world E-Commerce or electronic commerce is the fastest method to expand and grow throughout the world.</p>
 
       </div>
     <br><br>
